2012-11-06  Andreas Jaeger  <aj@suse.de>

	* po/eo.po: Update from translation team.

2012-11-06  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14793]
	* sysdeps/ieee754/dbl-64/s_fma.c (__fma): In case of large z
	exponent and small x and y exponents, scale x or y up.  Increase
	by 2 the exponent used in scaling up.
	* sysdeps/ieee754/ldbl-128/s_fmal.c (__fmal): Likewise.
	* sysdeps/ieee754/ldbl-96/s_fmal.c (__fmal): Likewise.
	* math/libm-test.inc (fma_test): Add more tests.
	(fma_test_towardzero): Likewise.
	(fma_test_downward): Likewise.
	(fma_test_upward): Likewise.

2012-11-05  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14805]
	* sysdeps/sh/sh4/fpu/bits/fenv.h (FE_DFL_ENV): Use cast to const
	fenv_t *.

	[BZ #14801]
	* sysdeps/s390/fpu/bits/fenv.h (fenv_t): Use implementation
	namespace for names of struct fields.
	* sysdeps/s390/fpu/fegetenv.c (fegetenv): Update references to
	fenv_t fields.
	* sysdeps/s390/fpu/feholdexcpt.c (feholdexcept): Likewise.
	* sysdeps/s390/fpu/fesetenv.c (fesetenv): Likewise.

2012-11-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	[BZ #3665]
	* sysdeps/mach/hurd/bits/errno.h: Regenerated.

2012-11-04  Thomas Schwinge  <thomas@codesourcery.com>

	* csu/libc-start.c (LIBC_START_MAIN): Conditionalize use of
	PTR_DEMANGLE.

	[BZ #5246]
	* sysdeps/mach/hurd/i386/____longjmp_chk.S: Conditionalize use of
	PTR_DEMANGLE.

2012-11-04  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14797]
	* sysdeps/ieee754/dbl-64/s_fma.c (__fma): Compute cases that
	definitely overflow as x * y not x * y + z.
	* sysdeps/ieee754/ldbl-128/s_fmal.c (__fmal): Likewise.
	* sysdeps/ieee754/ldbl-96/s_fmal.c (__fmal): Likewise.
	* math/libm-test.inc (fma_test): Add more tests.
	(fma_test_towardzero): Likewise.
	(fma_test_downward): Likewise.
	(fma_test_upward): Likewise.

2012-11-04  Thomas Schwinge  <thomas@codesourcery.com>

	[BZ #157]

	* include/stub-tag.h: Remove file.
	* sysdeps/unix/Makefile ($(objpfx)stub-syscalls.c): Don't emit
	'#include' of it.